--- a/Template/Home/service.html
+++ b/Template/Home/service.html
@@ -203,7 +203,7 @@
     
 
     <section id="faq-section">
-      <h2>Frequently Asked Questions</h2>
+      <h2>FAQ</h2>
       <div class="faq-container">
         <!-- FAQ Item 1 -->
         <div class="faq-item">
