--- a/Template/Home/siteMap.html
+++ b/Template/Home/siteMap.html
@@ -120,7 +120,7 @@
                             <li><a href="{% url 'Software' %}#web-project-a">Citizen Scheme Management Portal Software</a></li>
                             <li><a href="{% url 'Software' %}#web-project-b">PT, LWF and Other Tax Software</a></li>
                             <li><a href="{% url 'Software' %}#web-project-c">License and Registration Software</a></li>
-                            <li><a href="{% url 'Software' %}#web-project-d">Audit Utility Software</a></li>
+                            <li><a href="{% url 'Software' %}#web-project-d">CGST Thane Audit Utility Software</a></li>
                             <li><a href="{% url 'Software' %}#web-project-e">Compliance Audit Software</a></li>
                             <li><a href="{% url 'Software' %}#web-project-f">Compliance Operations Software</a></li>
                             <li><a href="{% url 'Software' %}#web-project-g">College Management System, Website Software</a></li>
@@ -148,7 +148,7 @@
                 <li><a href="{% url 'ContactUs' %}">Contact Us</a>
                     <ul>
                         <li><a href="{% url 'ContactUs' %}#social-media-section">Contact Us Slider</a></li>
-                        <li><a href="{% url 'ContactUs' %}#socialIcons">Socail Media</a></li>
+                        <li><a href="{% url 'ContactUs' %}#socialIcons">Social Media</a></li>
                         <li><a href="{% url 'ContactUs' %}#feedback-section">Customer Feedback</a></li>
                         <li><a href="{% url 'ContactUs' %}#technoWinContactSection">Get In Touch Form</a></li>
                         <li><a href="{% url 'ContactUs' %}#background-video-section">Our Gallery</a></li>
