--- a/Template/Home/software.html
+++ b/Template/Home/software.html
@@ -62,6 +62,10 @@
           <div class="text-card fadeInRight">
               <p>PSN maintains a Pool of Employees who work when there is a requirement by PSN customers like Amazon, Flipkart etc. The customer or PSN does this by opening slots/ shifts as per their requirement, the notification of which is sent to the Pool Employee on his registered App. The Pool Employee applies for these Slots as per hi convenience. The Attendance of the Employee is captured on the Slot day and his salary for the day is calculated based on the rate card assigned to his state and designation. The salary once approved is paid out to his registered account immediately and the UTR no and the  Pay slip is sent to his App. Employee’s profile data is displayed on the App and has an option to change the same. This includes the account details, which when changed hits a gateway which validates the modified account details and saves the new details only when correct. Employee can be added or removed from the Pool to maintain the Pool Hygiene based on performance in a period. 
                 </p>
+                <a href="http://13.202.30.119/" class="text-card-read-more read-more" target="_blank">
+                    <span>View</span>
+                    <i class="fas fa-eye"></i> <!-- FontAwesome eye icon -->
+                </a>
           </div>
         
      
@@ -150,7 +154,14 @@
                 <p>Server setup for development and testing, integration with the CIDCO application, development of API for integration with CIDCO Middleware and Aaple Sarkar.</p>
                 
                 <p><strong>Technology:</strong> ASP.Net, VB.Net, MSSQL</p>
+                
+                <!-- View Button with FontAwesome icon -->
+                <a href="https://drs.cidcoindia.com/" class="web-text-card-read-more read-more" target="_blank">
+                    <span>View</span>
+                    <i class="fas fa-eye"></i> <!-- FontAwesome eye icon -->
+                </a>
             </div>
+            
         
 
             <!-- Text Card -->
@@ -162,6 +173,11 @@
                     <p>Server setup for development and testing, Integration with the CIDCO application, Development of API for integration with CIDCO Middleware and Aaple Sarkar.</p>
                     
                     <p><strong>Technology: </strong>Django Python, MySQL, Cloud: AWS EC2, S3, RDS</p>
+                    <!-- View Button with FontAwesome icon -->
+                <a href="http://rtsengser.cidcoindia.com/" class="web-text-card-read-more read-more" target="_blank">
+                    <span>View</span>
+                    <i class="fas fa-eye"></i> <!-- FontAwesome eye icon -->
+                </a>
             </div>
     
             <div class="web-video-card slideInLeft">
@@ -192,6 +208,11 @@
                     <p><strong>Features:</strong>
                     A standalone application at the DDG to maintain the staff and equipment records, daily surveillance plans and records, fire drill plans and records and the SOPs.
                     A web based application to make available daily, periodic reports, SOP and other documents view, SOP maintenance and management with version control, Incidence management and dashboards of activities to the various stakeholders of the DDG management.</p>
+                       <!-- View Button with FontAwesome icon -->
+                <a href="https://dmsnmmc.com/" class="web-text-card-read-more read-more" target="_blank">
+                    <span>View</span>
+                    <i class="fas fa-eye"></i> <!-- FontAwesome eye icon -->
+                </a>
             </div>
 
                <!-- Text Card -->
@@ -330,6 +351,11 @@
         Servers provided by us. Setup, Maintenance and Application Management is also done by us.</p>
         
         <p><strong>Technology:</strong> MVC Dot Net, C#, MSSQL, Cloud: Azure</p>
+           <!-- View Button with FontAwesome icon -->
+           <a href="https://krc.svt.edu.in/" class="web-text-card-read-more read-more" target="_blank">
+            <span>View</span>
+            <i class="fas fa-eye"></i> <!-- FontAwesome eye icon -->
+        </a>
 </div>
 
 <!-- Text Card -->
@@ -344,6 +370,11 @@
         
         <p><strong>Technology:</strong> MVC Dot Net, C#, MSSQL, Cloud: Azure
         </p>
+           <!-- View Button with FontAwesome icon -->
+           <a href="https://schemenmmc.com/" class="web-text-card-read-more read-more" target="_blank">
+            <span>View</span>
+            <i class="fas fa-eye"></i> <!-- FontAwesome eye icon -->
+        </a>
 </div>
 
 <div class="web-video-card slideInLeft">
@@ -375,6 +406,11 @@
         Servers provided by us. Setup, Maintenance and Application Management was also done by us.</p>
         
         <p><strong>Technology:</strong> Django Python, MySQL, Cloud: AWS EC2, S3, RDS </p>
+           <!-- View Button with FontAwesome icon -->
+           <a href="https://lknconsultants.net/" class="web-text-card-read-more read-more" target="_blank">
+            <span>View</span>
+            <i class="fas fa-eye"></i> <!-- FontAwesome eye icon -->
+        </a>
 </div>
 
 <!-- Text Card -->
@@ -388,6 +424,11 @@
         Servers provided by us. Setup, Maintenance and Application Management was also done by us.</p>
         
         <p><strong>Technology:</strong> Django Python, MySQL, Cloud: AWS EC2, S3, RDS</p>
+         <!-- View Button with FontAwesome icon -->
+         <a href="https://lknconsultants.net/" class="web-text-card-read-more read-more" target="_blank">
+            <span>View</span>
+            <i class="fas fa-eye"></i> <!-- FontAwesome eye icon -->
+        </a>
 </div>
 
 <div class="web-video-card slideInLeft">
@@ -419,8 +460,6 @@
         Servers provided by us. Setup, Maintenance and Application Management is also done by us.</p>
         
         <p><strong>Technology:</strong> MVC Dot Net, C#, MSSQL, Cloud: AWS LightSail</p>
-        
-        </p>
 </div>
 
 <!-- Text Card -->
@@ -434,8 +473,11 @@
         Servers provided by us. Setup, Maintenance and Application Management was also done by us.</p>
         
         <p><strong>Technology:</strong> MVC Dot Net, C#, MSSQL, Cloud: Azure</p>
-        
-        </p>
+         <!-- View Button with FontAwesome icon -->
+         <a href="https://complianceaudit.lknconsultants.net/" class="web-text-card-read-more read-more" target="_blank">
+            <span>View</span>
+            <i class="fas fa-eye"></i> <!-- FontAwesome eye icon -->
+        </a>
 </div>
 
 <div class="web-video-card slideInLeft">
@@ -469,8 +511,11 @@
         Servers provided by us. Setup, Maintenance and Application Management was also done by us.</p>
         
         <p><strong>Technology:</strong> Django Python, MySQL, Cloud: AWS EC2, S3, RDS</p>
-        
-        </p>
+         <!-- View Button with FontAwesome icon -->
+         <a href="https://complianceoperation.lknconsultants.net/" class="web-text-card-read-more read-more" target="_blank">
+            <span>View</span>
+            <i class="fas fa-eye"></i> <!-- FontAwesome eye icon -->
+        </a>
 </div>
 
 
@@ -485,8 +530,8 @@
         <p>Development, Data Migration, Deployment, Implementation, Training, Maintenance and Support. 
         Azure Server was provided by us. Setup, Maintenance and Application Management was Also done by us.</p>
         
-        <p><strong>Technology:</strong> PHP, MVC Dot Net, C#, MySQL, MSSQL, Cloud: Azure, GoDaddy - Plesk        
-        </p>
+        <p><strong>Technology:</strong> PHP, MVC Dot Net, C#, MySQL, MSSQL, Cloud: Azure, GoDaddy - Plesk</p>
+        
 </div>
 
 <div class="web-video-card slideInLeft">
